made weird text animation

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The LABORATORY</title>
+    <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -13,6 +14,12 @@
       <div class="inner-div"></div>
     </div>
     <p>I am a <span>cool</span> guy</p>
+    <div class="animationtest1"></div>
+    <div class="animationtest2"></div>
+    <div class="flashyHeaderContainer">
+      <h2 class="flashyHeader flashyShadow">Hello I am a text</h2>
+      <h2 class="flashyHeader flashyText">Hello I am a text</h2>
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
