--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <div class="animationtest1"></div>
     <div class="animationtest2"></div>
     <div class="flashyHeaderContainer">
-      <h2 class="flashyHeader flashyShadow">Hello I am a text</h2>
-      <h2 class="flashyHeader flashyText">Hello I am a text</h2>
+      <h2 class="flashyHeader flashyShadow">HOVER ME</h2>
+      <h2 class="flashyHeader flashyText">HOVER ME</h2>
     </div>
     <script src="app.js"></script>
   </body>
