messed around with hover effect

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <div class="top-div">
       <div class="inner-div"></div>
     </div>
-    <p>I am a <span>cool</span> guy</p>
+    <p>I am a <span class="coolspan">cool</span> guy</p>
     <div class="animationtest1"></div>
     <div class="animationtest2"></div>
     <div class="flashyHeaderContainer">
-      <h2 class="flashyHeader flashyShadow">HOVER ME</h2>
-      <h2 class="flashyHeader flashyText">HOVER ME</h2>
+      <h2 class="flashyHeader flashyShadow">HOVER ME<span class="flashyspan"> !</span></h2>
+      <h2 class="flashyHeader flashyText">HOVER ME<span class="flashyspan"> !</span></h2>
     </div>
     <script src="app.js"></script>
   </body>
