make new CV prototype section

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <h2 class="flashyHeader flashyShadow">HOVER ME<span class="flashyspan"> !</span></h2>
       <h2 class="flashyHeader flashyText">HOVER ME<span class="flashyspan"> !</span></h2>
     </div>
+    <a href="CVprototype.html">CV?</a>
     <script src="app.js"></script>
   </body>
 </html>
