--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <h2 class="flashyHeader flashyText">HOVER ME<span class="flashyspan"> !</span></h2>
     </div>
     <a href="CVprototype.html">CV?</a>
+    <a href="divSpill.html">div spill</a>
     <script src="app.js"></script>
   </body>
 </html>
