improved text hover animation

--- a/divSpill.html
+++ b/divSpill.html
@@ -15,6 +15,7 @@
         <div id="div4" class="stacked" onclick="handleClick(event)"></div>
       </div>
     </div>
+    <a href="index.html"> go back</a>
     <script src="divSpill.js"></script>
   </body>
 </html>
