added grainy gradient experiment

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>WELCOME TO THE LABORATORY</h1>
+    <h1 class="welcome">WELCOME TO THE LABORATORY</h1>
     <div class="top-div">
       <div class="inner-div"></div>
     </div>
@@ -22,6 +22,10 @@
     </div>
     <a href="CVprototype.html">CV?</a>
     <a href="divSpill.html">div spill</a>
+    <a href="grains.html">grains</a>
+    <!-- <div class="divTestDiv">
+      <h1 class="divTestText">DIV TEST</h1>
+    </div> -->
     <script src="app.js"></script>
   </body>
 </html>
