--- a/grains2.html
+++ b/grains2.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Grains 1</title>
+    <title>grains 2</title>
     <link rel="stylesheet" href="reset.css" />
-    <link rel="stylesheet" href="grains.css" />
+    <link rel="stylesheet" href="grains2.css" />
   </head>
   <body>
-    <div id="gradientContainer"></div>
-    <div id="grainContainer"></div>
-    <div id="gradientContainer2"></div>
+    <div id="isolate">
+      <div id="gradientContainer"></div>
+      <div id="gradientContainer2"></div>
+    </div>
   </body>
-  <script src="grains.JS"></script>
+  <script src="grains2.JS"></script>
 </html>
