--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     </div>
     <a href="CVprototype.html">CV?</a>
     <a href="divSpill.html">div spill</a>
-    <a href="grains.html">grains</a>
+    <a href="grains.html">grains v1</a>
+    <a href="grains2.html">grains v2</a>
     <!-- <div class="divTestDiv">
       <h1 class="divTestText">DIV TEST</h1>
     </div> -->
