--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <a href="divSpill.html">div spill</a>
     <a href="grains.html">grains v1</a>
     <a href="grains2.html">grains v2</a>
+    <a href="follow.html">follow</a>
     <!-- <div class="divTestDiv">
       <h1 class="divTestText">DIV TEST</h1>
     </div> -->
