added moon, a hover effect experiment

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <a href="grains.html">grains v1</a>
     <a href="grains2.html">grains v2</a>
     <a href="follow.html">follow</a>
+    <a href="moon.html">moon</a>
     <!-- <div class="divTestDiv">
       <h1 class="divTestText">DIV TEST</h1>
     </div> -->
