--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <a href="grains2.html">grains v2</a>
     <a href="follow.html">follow</a>
     <a href="moon.html">moon</a>
+    <a href="bigMouse.html">BigMouse</a>
     <!-- <div class="divTestDiv">
       <h1 class="divTestText">DIV TEST</h1>
     </div> -->
