--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <a href="follow.html">follow</a>
     <a href="moon.html">moon</a>
     <a href="bigMouse.html">BigMouse</a>
+    <a href="RGBweird.html">RGBweird</a>
     <!-- <div class="divTestDiv">
       <h1 class="divTestText">DIV TEST</h1>
     </div> -->
