added code to RGBhover to split and multiply and combine and overlap the input text, next step is to implement the mouse avoidance

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
     <a href="moon.html">moon</a>
     <a href="bigMouse.html">BigMouse</a>
     <a href="RGBweird.html">RGBweird</a>
+    <a href="RGBhover.html">RGBhover</a>
+    <br />
+    <span class="overlap">A</span><span class="overlap overlap1">A</span><span class="overlap overlap2">A</span><span class="overlap">B</span><span class="overlap overlap1">B</span
+    ><span class="overlap overlap2">B</span>
     <!-- <div class="divTestDiv">
       <h1 class="divTestText">DIV TEST</h1>
     </div> -->
