finished(?) RGBhover, it's not working as intended

--- a/RGBhover.html
+++ b/RGBhover.html
@@ -10,7 +10,7 @@
   <body>
     <div id="pageContainer">
       <div id="textContainer">
-        <p id="testText">RGBtest</p>
+        <p id="testText">This is a text woohoo</p>
       </div>
     </div>
   </body>
