--- a/RGBhover.html
+++ b/RGBhover.html
@@ -10,7 +10,9 @@
   <body>
     <div id="pageContainer">
       <div id="textContainer">
-        <p id="testText">This is a text woohoo</p>
+        <p id="testText">
+          This&nbsp;is&nbsp;a&nbsp;text&nbsp;woohoo&nbsp;I&nbsp;love&nbsp;to&nbsp;code&nbsp;websites&nbsp;and&nbsp;make&nbsp;them&nbsp;work&nbsp;and&nbsp;look&nbsp;cool&nbsp;and&nbsp;do&nbsp;cool&nbsp;stuff&nbsp;coz&nbsp;i&nbsp;am&nbsp;a&nbsp;cool&nbsp;guy&nbsp;and&nbsp;really&nbsp;friendly
+        </p>
       </div>
     </div>
   </body>
