started working on the eyes

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <a href="bigMouse.html">BigMouse</a>
     <a href="RGBweird.html">RGBweird</a>
     <a href="RGBhover.html">RGBhover</a>
+    <a href="eyes.html">eyes</a>
     <br />
     <span class="overlap">A</span><span class="overlap overlap1">A</span><span class="overlap overlap2">A</span><span class="overlap">B</span><span class="overlap overlap1">B</span
     ><span class="overlap overlap2">B</span>
