--- a/eye.html
+++ b/eye.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Eyes</title>
-    <link rel="stylesheet" href="eyes.css" />
+    <title>Eye</title>
+    <link rel="stylesheet" href="eye.css" />
     <link rel="stylesheet" href="reset.css" />
   </head>
   <body>
@@ -14,4 +14,5 @@
       </div>
     </div>
   </body>
+  <script src="eye.JS"></script>
 </html>
