started physics experiment

--- a/index.html
+++ b/index.html
@@ -20,17 +20,21 @@
       <h2 class="flashyHeader flashyShadow">HOVER ME<span class="flashyspan"> !</span></h2>
       <h2 class="flashyHeader flashyText">HOVER ME<span class="flashyspan"> !</span></h2>
     </div>
-    <a href="CVprototype.html">CV?</a>
-    <a href="divSpill.html">div spill</a>
-    <a href="grains.html">grains v1</a>
-    <a href="grains2.html">grains v2</a>
-    <a href="follow.html">follow</a>
-    <a href="moon.html">moon</a>
-    <a href="bigMouse.html">BigMouse</a>
-    <a href="RGBweird.html">RGBweird</a>
-    <a href="RGBhover.html">RGBhover</a>
-    <a href="eye.html">eye</a>
-    <a href="eyes.html">eyes</a>
+    <div>
+      <h3>pages!</h3>
+      <a href="CVprototype.html">CV?</a>
+      <a href="divSpill.html">div spill</a>
+      <a href="grains.html">grains v1</a>
+      <a href="grains2.html">grains v2</a>
+      <a href="follow.html">follow</a>
+      <a href="moon.html">moon</a>
+      <a href="bigMouse.html">BigMouse</a>
+      <a href="RGBweird.html">RGBweird</a>
+      <a href="RGBhover.html">RGBhover</a>
+      <a href="eye.html">eye</a>
+      <a href="eyes.html">eyes</a>
+      <a href="physics.html">physics</a>
+    </div>
     <br />
     <span class="overlap">A</span><span class="overlap overlap1">A</span><span class="overlap overlap2">A</span><span class="overlap">B</span><span class="overlap overlap1">B</span
     ><span class="overlap overlap2">B</span>
