--- a/physics.html
+++ b/physics.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="pageContainer">
-      <div id="physBody">b</div>
+      <div id="physBody"></div>
     </div>
   </body>
   <script src="physics.js"></script>
