added to physics experiment

--- a/physics.html
+++ b/physics.html
@@ -11,6 +11,7 @@
     <div id="pageContainer">
       <div id="physBody"></div>
     </div>
+    <audio id="bonkSound" src="./sounds/Bamboo Hit - Sound Effect (HD).mp3"></audio>
   </body>
   <script src="physics.js"></script>
 </html>
